cluster/gitops/data/rabbitmq/messaging-topology-operator/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rabbitmq-messaging-topology-operator
specs:
  - description: rabbitmq-messaging-topology-operator
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: rabbitmq-messaging-topology-operator
        app.kubernetes.io/instance: rabbitmq-messaging-topology-operator
        app.kubernetes.io/component: messaging-topology-operator
    egress:
      # k8s API for resource management
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      # k8s API webhook calls
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "9443"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
